[package]
name = "cargo-gazelle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
camino = "1"
cargo_metadata = "0.18.1"
cargo_toml = "0.19.1"
clap = { version = "4", features = ["derive"] }
convert_case = "0.6"
guppy = "0.17.5"
proc-macro2 = "1"
protobuf-parse = "3.4.0"
quote = "1"
serde = "1"
serde_json = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
insta = "1"
